Implement Ace code editor

--- a/dvjudge/templates/layout.html
+++ b/dvjudge/templates/layout.html
@@ -62,8 +62,6 @@
 
       <ul class="nav navbar-nav navbar-right">
           {% if not session.logged_in %}
-         <!--li><a href="{{ url_for('login') }}">Log in</a></li-->
-         <!--li><a href="{{ url_for('signup') }}">Sign up</a></li-->
         <button class="btn btn-primary btn-lg" href="#signup" data-toggle="modal" data-target=".bs-modal-sm">Sign In/Register</button>
 
 <!-- Modal -->
@@ -224,6 +222,35 @@
   {% endfor %}
   <div class="container">
       {% if error %}<p class=error><strong>Error:</strong> {{ error }}{% endif %}
-    </div>
+  </div>
   {% block body %}{% endblock %}
+  <div class="container">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <footer>
+        <div class="footer" id="footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-3  col-md-3 col-sm-6 col-xs-12 ">
+                        <h3> Find us at</h3>
+                        <ul class="social">
+                            <li> <a href="#"> <i class=" fa fa-facebook">   </i> </a> </li>
+                            <li> <a href="#"> <i class="fa fa-twitter">   </i> </a> </li>
+                            <li> <a href="#"> <i class="fa fa-google-plus">   </i> </a> </li>
+                        </ul>
+                    </div>
+                </div>
+                <!--/.row--> 
+            </div>
+            <!--/.container--> 
+        </div>
+        <!--/.footer-->
+        
+        <div class="footer-bottom">
+            <div class="container">
+                <p class="pull-left"> Copyright © Bloom. All right reserved. </p>
+            </div>
+        </div>
+        <!--/.footer-bottom--> 
+    </footer>
+  </div>
 </div>
