--- a/dvjudge/templates/layout.html
+++ b/dvjudge/templates/layout.html
@@ -17,16 +17,11 @@
         width: 600px;
         height: 5px;
     }
-    #editor_div {
+    #editor {
         display: block;
-        margin: auto;
-        width: 600px;
-        height: 300px;
         border: 1px solid #888;
     }
-    form {
-        text-align: center;
-    }
+
 </style>
 
 </head>
@@ -86,10 +81,7 @@
         </div>
       <div class="modal-body">
         <div id="myTabContent" class="tab-content">
-        <!--div class="tab-pane fade in" id="why">
-        <p>We need this information so that you can receive access to the site and its content. Rest assured your information will not be sold, traded, or given to anyone.</p>
-        <p></p><br> Please contact <a mailto:href="JoeSixPack@Sixpacksrus.com"></a>JoeSixPack@Sixpacksrus.com</a> for any other inquiries.</p>
-        </div-->
+
         <div class="tab-pane fade active in" id="signin">
             <form class="form-horizontal" action="{{ url_for('login_signup_form') }}" method=post>
               <input type="hidden" name="page" value="{{ request.url_rule.endpoint }}">
@@ -112,17 +104,6 @@
               </div>
             </div>
 
-            <!-- Multiple Checkboxes (inline) -->
-            <!--div class="control-group">
-              <label class="control-label" for="rememberme"></label>
-              <div class="controls">
-                <label class="checkbox inline" for="rememberme-0">
-                  <input type="checkbox" name="rememberme" id="rememberme-0" value="Remember me">
-                  Remember me
-                </label>
-              </div>
-            </div-->
-
             <!-- Button -->
             <div class="control-group">
               <label class="control-label" for="signin"></label>
@@ -136,6 +117,7 @@
 
         <div class="tab-pane fade" id="signup">
             <form class="form-horizontal" action="{{ url_for('login_signup_form') }}" method=post>
+               <input type="hidden" name="page" value="{{ request.url_rule.endpoint }}">
             <fieldset>
             <!-- Sign Up Form -->
             <!-- Text input-->
@@ -170,18 +152,6 @@
                 <input id="confirmpassword" class="form-control" name="confirmpassword" type="password" placeholder="********" class="input-large" required="">
               </div>
             </div>
-            
-            <!-- Multiple Radios (inline) -->
-            <!--br>
-            <div class="control-group">
-              <label class="control-label" for="humancheck">Humanity Check:</label>
-              <div class="controls">
-                <label class="radio inline" for="humancheck-0">
-                  <input type="radio" name="humancheck" id="humancheck-0" value="robot" checked="checked">I'm a Robot</label>
-                <label class="radio inline" for="humancheck-1">
-                  <input type="radio" name="humancheck" id="humancheck-1" value="human">I'm Human</label>
-              </div>
-            </div-->
             
             <!-- Button -->
             <div class="control-group">
