--- a/dvjudge/templates/show_mainpage.html
+++ b/dvjudge/templates/show_mainpage.html
@@ -27,7 +27,7 @@
     <div class="container-fluid">
         <h1>Welcome {{ session.user }}!</h1>
         <br>
-        <p><a href="{{ url_for('profile') }}/{{ session.user }}" target="_blank" class="btn btn-primary">VIEW YOUR PROGRESS</a></p>
+        <p><a href="{{ url_for('myprofile') }}" target="_blank" class="btn btn-primary">VIEW YOUR PROGRESS</a></p>
     </div>
 </div>
 <div class="container-fluid">
