--- a/dvjudge/templates/show_mainpage.html
+++ b/dvjudge/templates/show_mainpage.html
@@ -25,9 +25,9 @@
 {% else %}
 <div class="jumbotron">
     <div class="container-fluid">
-        <h1>Welcome {{ session.user }}!</h1>
+        <h1>Welcome {{ session.userid  }}!</h1>
         <br>
-        <p><a href="{{ url_for('myprofile') }}" target="_blank" class="btn btn-primary">VIEW YOUR PROGRESS</a></p>
+        <p><a href="profile" class="btn btn-primary">VIEW YOUR PROGRESS</a></p>
     </div>
 </div>
 <div class="container-fluid">
