--- a/dvjudge/templates/layout.html
+++ b/dvjudge/templates/layout.html
@@ -100,7 +100,7 @@
             <div class="control-group">
               <label class="control-label" for="passwordinput">Password:</label>
               <div class="controls">
-                <input required="" id="passwordinput" name="password" class="form-control" type="password" placeholder="********" class="input-medium">
+                <input required="" id="passwordinput" name="password" class="form-control" minlength="6" maxlength="20" type="password" placeholder="********" class="input-medium">
               </div>
             </div>
 
@@ -140,8 +140,7 @@
             <div class="control-group">
               <label class="control-label" for="password">Password:</label>
               <div class="controls">
-                <input id="password" name="password" class="form-control" type="password" placeholder="********" class="input-large" required="">
-                <em>1-8 Characters</em>
+                <input id="password" name="password" class="form-control" type="password" minlength="6" maxlength="20" placeholder="********" class="input-large" required="">
               </div>
             </div>
             
@@ -180,8 +179,8 @@
             <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ session.user }} <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Messages</a></li>
-            <li><a href="#">Settings</a></li>
+            <li><a href="/profile">Profile</a></li>
+            <li><a href="#">My Playlists</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="#">Separated link</a></li>
           </ul>
