--- a/dvjudge/templates/profile.html
+++ b/dvjudge/templates/profile.html
@@ -4,24 +4,25 @@
 <div class="container">
     <h1>Edit Profile</h1>
     <hr>
-    <div class="row">
+    <div class="row row-equ-height">
       <!-- left column -->
-      <div class="col-md-3">
-        <div class="text-center">
-          <img src="//placehold.it/100" class="avatar img-circle" alt="avatar">
-          <h6>Upload a different photo...</h6>
-          
-          <input type="file" class="form-control">
-        </div>
+      <div class="col-equ-height col-md-3">
+        <br>
+        <br>
+        <form enctype=multipart/form-data class="form-horizontal" action="{{ url_for('updateprofilepic') }}">
+          <div class="text-center">
+            <img src="" class="avatar img-circle" alt="avatar">
+            <h6>Upload a different photo...</h6>
+            
+            <input type="file" class="form-control">
+            <br>
+            <input type="submit" value="upload">
+          </div>
+        </form>
       </div>
       
       <!-- edit form column -->
-      <div class="col-md-9 personal-info">
-        <div class="alert alert-info alert-dismissable">
-          <a class="panel-close close" data-dismiss="alert">×</a> 
-          <i class="fa fa-coffee"></i>
-          This is an <strong>.alert</strong>. Use this to show important messages to the user.
-        </div>
+      <div class="col-equ-height col-md-9 personal-info">
         <h3>Personal info</h3>
         
         <form class="form-horizontal" role="form" action="{{ url_for('updateprofile') }}" method=post>
@@ -47,13 +48,13 @@
           <div class="form-group">
             <label class="col-md-3 control-label">Password:</label>
             <div class="col-md-8">
-              <input class="form-control" type="password" value="passwordtmp" name="pass1">
+              <input class="form-control" type="password" placeholder="********" minlength="6" maxlength="20" name="pass1">
             </div>
           </div>
           <div class="form-group">
             <label class="col-md-3 control-label">Confirm password:</label>
             <div class="col-md-8">
-              <input class="form-control" type="password" value="passwordtmp" name="pass2">
+              <input class="form-control" type="password" placeholder="********" minlength="6" maxlength="20" name="pass2">
             </div>
           </div>
           <div class="form-group">
