Fixed all bugs outlined for prettify branch plus changed all instances of "problem" in "challenge"
-Code editor works well; now captures not only previous code submission but also the language they used
-Signup should work on all pages. Still minor bug on challenges page which redirects to home page currently. I will fix this but not tonight

--- a/dvjudge/templates/browse.html
+++ b/dvjudge/templates/browse.html
@@ -20,11 +20,11 @@
           </thead>
           <tbody>
             <ul class=challenges>
-            {% for problem in challenges %}
+            {% for challenge in challenges %}
             <tr>
-              {# Both of the following links should link to browse/<problem_name> #}
-              <td><b><a href="browse/{{ problem.name }}">{{ problem.id }}</a></b></td>
-              <td><a href="browse/{{ problem.name }}">{{ problem.name }}</a></td>
+              {# Both of the following links should link to browse/<challenge_name> #}
+              <td><b><a href="browse/{{ challenge.name }}">{{ challenge.id }}</a></b></td>
+              <td><a href="browse/{{ challenge.name }}">{{ challenge.name }}</a></td>
               <td>Stanley</td>
               <td>Nope</td>
             </tr>
