DVJ-121 DVJ-122 DVJ-123 Cleaned-up change over to "challenge" and removed unecessary prints

--- a/dvjudge/templates/challenge.html
+++ b/dvjudge/templates/challenge.html
@@ -24,7 +24,7 @@
         <div class="tab-content">
           <div id="Desc" class="tab-pane fade in active">
             <p>{{ challenge_info.description }}</p>
-            <p>[{{ language }}][{{ code }}][{{ jsonlanguage }}]</p>
+            <!--p>[{{ language }}][{{ code }}][{{ jsonlanguage }}]</p-->
           </div>
           <div id="IO" class="tab-pane fade">
             <p>{{ challenge_info.input_desc }}</p>
