--- a/dvjudge/templates/layout.html
+++ b/dvjudge/templates/layout.html
@@ -89,6 +89,9 @@
         </div-->
         <div class="tab-pane fade active in" id="signin">
             <form class="form-horizontal" action="{{ url_for('login_signup_form') }}" method=post>
+              {% if challenge_info %}
+              <input type="hidden" name="challenge_name" value="{{ challenge_info.name }}">
+              {% endif %}
               <input type="hidden" name="page" value="{{ request.url_rule.endpoint }}">
 
             <fieldset>
@@ -133,6 +136,9 @@
 
         <div class="tab-pane fade" id="signup">
             <form class="form-horizontal" action="{{ url_for('login_signup_form') }}" method=post>
+              {% if challenge_info %}
+              <input type="hidden" name="challenge_name" value="{{ challenge_info.name }}">
+              {% endif %}
               <input type="hidden" name="page" value="{{ request.url_rule.endpoint }}">
             <fieldset>
             <!-- Sign Up Form -->
