--- a/dvjudge/templates/problem.html
+++ b/dvjudge/templates/problem.html
@@ -69,5 +69,7 @@
 });
   </script>
 
-{% include "comments.html" %}
+<!--Link to forums page-->
+<a href="/forums/{{ problem_info.problem_id }}">Click here to see the forums page on this problem</a>
+
 {% endblock %}
