DVJ-30, DVJ-63, DVJ-83: Fixed bug of general public submission for all problems Playlists now have unique URL and user can try a select sample before signing up

--- a/dvjudge/templates/browse.html
+++ b/dvjudge/templates/browse.html
@@ -23,8 +23,8 @@
             {% for challenge in challenges %}
             <tr>
               {# Both of the following links should link to browse/<challenge_name> #}
-              <td><b><a href="browse/{{ challenge.name }}">{{ challenge.id }}</a></b></td>
-              <td><a href="browse/{{ challenge.name }}">{{ challenge.name }}</a></td>
+              <td><b><a href="{{ url_for('browse_specific_challenge', challenge_name=challenge.name) }}">{{ challenge.id }}</a></b></td>
+              <td><a href="{{ url_for('browse_specific_challenge', challenge_name=challenge.name) }}">{{ challenge.name }}</a></td>
               <td>Stanley</td>
               <td>Nope</td>
             </tr>
