DVJ-76 - This change adds functionality on the front-end and back-end to keep track of completed challenges.
- Implements completed column in /browse page
- Adds completed challenges to /myprofile
- Completing challenges now will update both /browse and /myprofile with challenges you have completed
- Implements tests for all this functionality

- Modifies the database to include a field in the user table to keep track of completed challenges
- Modifies the nav-bar to include a link below your username to your profile page
- Deleted some commented out tests
- Modifies submission functionality slightly to update user's completed challenges

--- a/dvjudge/templates/browse.html
+++ b/dvjudge/templates/browse.html
@@ -25,8 +25,12 @@
               {# Both of the following links should link to browse/<challenge_name> #}
               <td><b><a href="{{ url_for('browse_specific_challenge', challenge_name=challenge.name) }}">{{ challenge.id }}</a></b></td>
               <td><a href="{{ url_for('browse_specific_challenge', challenge_name=challenge.name) }}">{{ challenge.name }}</a></td>
-              <td>Stanley</td>
-              <td>Nope</td>
+              <td>DVJUDGE</td>
+              {% if challenge.completed %}
+                <td>Yes</td>
+              {% else %}
+                <td>No</td>
+              {% endif %}
             </tr>
             {% endfor %}
             </ul>
