--- a/dvjudge/templates/layout.html
+++ b/dvjudge/templates/layout.html
@@ -214,6 +214,8 @@
             <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ session.user }} <span class="caret"></span></a>
           <ul class="dropdown-menu">
+            <li><a href="/myprofile">Profile</a></li>
+            <li role="separator" class="divider"></li>
             <li><a href="#">Messages</a></li>
             <li><a href="#">Settings</a></li>
             <li role="separator" class="divider"></li>
