--- a/dvjudge/templates/submissions.html
+++ b/dvjudge/templates/submissions.html
@@ -21,8 +21,8 @@
             <td>{{ submission.timestamp }}</a></td>
             <td><a href="browse/{{ submission.challenge_name }}">{{ submission.challenge_name }}</td>
             <td><a href="submissions/{{ submission.id }}">{{ submission.status }}</td>
-            <td>1337 Seconds</td>
-            <td>Probably C</td>
+            <td>Not yet implemented</td>
+            <td>{{ submission.language }}</td>
           </tr>
           {% endfor %}
           </ul>
