--- a/dvjudge/templates/playlists.html
+++ b/dvjudge/templates/playlists.html
@@ -1,10 +1,6 @@
 {% extends "layout.html" %}
 {% block body %}
-<!DOCTYPE html>
-<head>
-  <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-  <script type="text/javascript" src="{{ url_for('static', filename='rowsort.js') }}"></script>
-</head>
+
 <body>
   <h1>{{ session.user }}'s Playlists
   {% if playlists is not none %}
@@ -29,7 +25,7 @@
     </form>
 
     <button type="button" class="btn btn-link" id="new_list">
-    <a href="{{ url_for('show_playlist_form') }}"><font size="3.5">+ Create New Playlist...</font></a>
+    <a href="{{ url_for('show_playlist_form') }}" class="btn btn-primary btn-lg active" role="button"><font size="3.5">New Playlist</font></a>
     </button>
     <br /><br />
     <h4>{{ selection.name }}'s Playlist ID:
@@ -73,7 +69,7 @@
     </form>
   {% else %}
     <button type="button" class="btn btn-link" id="new_list">
-    <a href="{{ url_for('show_playlist_form') }}"><font size="3.5">+ Create New Playlist...</font></a>
+    <a href="{{ url_for('show_playlist_form') }}" class="btn btn-primary btn-lg active" role="button"><font size="3.5">New Playlist</font></a>
     </button>
     <br /><br />
     <h4>You have no playlists.</h4>
