upload login connects to the login form

--- a/dvjudge/templates/upload_challenge.html
+++ b/dvjudge/templates/upload_challenge.html
@@ -80,7 +80,8 @@
   </div>
   {% else %}
     <div class="container">
-      <p> You need to be <a href="/login"> logged in </a> to create a challenge </p>
+      <!--p> You need to be <a href="/login"> logged in </a> to create a challenge </p-->
+      <p> You need to be <a href="#signup" data-toggle="modal" data-target=".bs-modal-sm">logged in</a> to create a challenge </p>
   {% endif %}
 
 {% endblock %}
