--- a/dvjudge/templates/challenge.html
+++ b/dvjudge/templates/challenge.html
@@ -103,6 +103,7 @@ function changeText(choice){
     <br />
     {% if not session.logged_in and challenge_info.com_flag != 2 %}
       <input type="submit" value="Submit" class="btn btn-primary btn-lg disabled">
+      <div class="container">You need to be <a href="#signup" data-toggle="modal" data-target=".bs-modal-sm">logged in</a> to submit a challenge </div>
     {% else %}
       <input type="submit" value="Submit" id="submit" class="btn btn-primary btn-lg" form="code">
     {% endif %}
