--- a/dvjudge/templates/layout.html
+++ b/dvjudge/templates/layout.html
@@ -232,15 +232,16 @@
   </div><!-- /.container-fluid -->
 </nav>
 <div class=page>
-  {% for message in get_flashed_messages() %}
-  <div class="alert alert-info alert-dismissable"><a class="panel-close close" data-dismiss="alert">×</a> 
+  {% for category, message in get_flashed_messages(category_filter!=["error"]) %}
+  <div class="alert alert-info alert-dismissable"><a class="panel-close close" data-dismiss="alert">×</a>
     {{ message }}
   </div>
   {% endfor %}
-  <div class="container">
-      {% if session.error %}<p class=error><strong>Error:</strong> {{ session.error }}{% endif %}
+  {% for error in get_flashed_messages(category_filter=["error"]) %}
+  <div class="alert alert-error"><a class="close" data-dismiss="alert">×</a>
+    {{ error }}
   </div>
-
+  {% endfor %}
 
   {% block body %}{% endblock %}
 
