--- a/dvjudge/templates/layout.html
+++ b/dvjudge/templates/layout.html
@@ -57,9 +57,9 @@
       <form class="navbar-form navbar-left" role="search" action="{{ url_for('browse') }}" method=post>
         <div class="form-group">
           {% if searchterm %} 
-        <input type="text" name="searchterm" value="{{searchterm}}" class="form-control">
+        <input type="text" id="exampleInputName2" name="searchterm" value="{{searchterm}}" class="form-control">
         {% else %}
-        <input type="text" name="searchterm">
+        <input type="text" id="exampleInputName2" name="searchterm">
         {% endif %}
         </div>
         <button type="submit" class="btn btn-default">Search</button>
