--- a/dvjudge/templates/new_forum.html
+++ b/dvjudge/templates/new_forum.html
@@ -1,19 +1,14 @@
 {% extends "layout.html" %}
 {% block body %}
-
-{% if error %}
-<table class="table table-hover">
-  <p class=error><strong>Error:</strong> {{ error }}
-</table>
-{% endif %}
-
+<div class="container">
   <div class="form-group">
+    <div class ="col-equ-height col-md-8 personal-info" style="display: inline-block; margin: 2px">
     <form action="{{ problem_id }}" method=post>
       <dl>
         <div class="form-group">
           <dt><h3>Ask a question</h3>
-          <dd><input type=text name=question required class="form-control" id="exampleInputEmail1" placeholder="Question" value='{{ question }}'>
-          <dd><input type=textarea class="form-control" name=postbody rows="4" placeholder="Specifics" value='{{ question_body }}'></input>
+          <dd><input type=text name=question required class="form-control" id="exampleInputEmail1" placeholder="Question" value='{{ question }}' style="margin:3px">
+          <dd><textarea class="form-control" name=postbody rows="4" placeholder="Specifics" style="margin:3px" value='{{ question_body }}'></textarea>
         </div>
         <div class="form-group">
           <dd><input type=submit class="btn btn-default" value=Submit>
@@ -21,5 +16,14 @@
       </dl>
     </form>
   </div>
-
+  <!--Display guidelines-->
+  <div class="col-equ-height col-md-3 personal-info" style="display: inline-block; margin: 10px">
+    <h3>Forum Guidelines</h3>
+    <p>No personal attacks</p>
+    <p>Don't ask a question that has already been asked</p>
+    <p>Don't give away the answer</p>
+    <p>Be specific about your problem and ensure that you at least include: the problem name, langauge, compiler error (if that is your problem) and specifics on what you want to do and what you don't know how to do</p>
+  </div>
+</div>
+</div>
 {% endblock %} 
