--- a/dvjudge/templates/submissions.html
+++ b/dvjudge/templates/submissions.html
@@ -19,7 +19,7 @@
           <tr>
             <td>{{ submission.id }}</td>
             <td>{{ submission.timestamp }}</a></td>
-            <td><a href="browse/{{ submission.challenge_name }}">{{ submission.challenge_name }}</td>
+            <td><a href="browse/{{ submission.problem_name }}">{{ submission.challenge_name }}</a></td>
             <td><a href="submissions/{{ submission.id }}">{{ submission.status }}</td>
             <td>Not yet implemented</td>
             <td>{{ submission.language }}</td>
