--- a/dvjudge/templates/upload_challenge.html
+++ b/dvjudge/templates/upload_challenge.html
@@ -62,14 +62,27 @@
       </div>
       <div class="form-group">
         <label for="output_desc" class="col-sm-2 control-label">Output Description</label>
-        <div class="col-sm-10">
+        <div class="col-sm-10" style="margin-bottom:2%">
           <input name="output_desc" class="form-control" id="output_desc" placeholder="Output Description">
         </div>
       </div>
+      <div class="form-group">
+        <label for="categories" class="col-sm-2 control-label">Categories</label>
+        <div align="center" id="categories">
+        {% for category in categories %}
+          <label style="margin-left: 2%; font-weight: normal;"><input type="checkbox" value=""> {{ category.name }}</label>
+          {% if loop.index % 3 == 0 %}
+            <br>
+          {% endif %}
+        {% endfor %}
+        </div>
+      </div>
+      <br />
       <label for="tests" class="col-sm-2 control-label">Sample Tests</label>
         <div class="col-sm-10">
           <textarea name="tests" class="form-control" rows="3" id="tests" placeholder="Add Sample Tests Here"></textarea>
         </div>
+      <br />
       </div>
       <div class="form-group">
         <div class="col-sm-offset-2 col-sm-8">
@@ -82,5 +95,15 @@
     <div class="container">
       <p> You need to be <a href="#signup" data-toggle="modal" data-target=".bs-modal-sm">logged in</a> to create a challenge </p>
   {% endif %}
+<style>
+#categories {
+  text-align: center;
+  margin-left: 16%;
+}
+.col-sm-10 {
+  margin-bottom: 1%;
+}
+</style>
+
 
 {% endblock %}
