--- a/dvjudge/templates/upload_challenge.html
+++ b/dvjudge/templates/upload_challenge.html
@@ -24,6 +24,33 @@
     </div>
 
   {% if session.logged_in %}
+  {% if flags.empty %}
+    <div class="alert alert-info alert-dismissable">
+      <a class="panel-close close" data-dismiss="alert">×</a> 
+      Please insert a valid challenge name.
+    </div>
+  {% elif flags.length %}
+    <div class="alert alert-info alert-dismissable">
+      <a class="panel-close close" data-dismiss="alert">×</a> 
+      Challenge names cannot exceed 70 characters.
+    </div>
+  {% elif flags.special %}
+    <div class="alert alert-info alert-dismissable">
+      <a class="panel-close close" data-dismiss="alert">×</a> 
+      Challenge names can only contain alphanumeric characters, hyphens and underscores.
+    </div>
+  {% elif flags.conflict %}
+    <div class="alert alert-info alert-dismissable">
+      <a class="panel-close close" data-dismiss="alert">×</a> 
+      Challenge already exists with that name.
+    </div>
+  {% elif flags.success %}
+    <div class="alert alert-info alert-dismissable">
+      <a class="panel-close close" data-dismiss="alert">×</a> 
+      Challenge successfully added.
+    </div>
+  {% endif %}
+
   <div class="container">
     <form action="{{ url_for('upload') }}" method=post class=upload-challenge, class="form-horizontal">
       <div class="form-group">
@@ -70,7 +97,7 @@
         <label for="categories" class="col-sm-2 control-label">Categories</label>
         <div align="center" id="categories">
         {% for category in categories %}
-          <label style="margin-left: 2%; font-weight: normal;"><input type="checkbox" value=""> {{ category.name }}</label>
+          <label style="margin-left: 2%; font-weight: normal;"><input type="checkbox" name="{{ category.name }}" value="{{ category.name }}"> {{ category.name }}</label>
           {% if loop.index % 3 == 0 %}
             <br>
           {% endif %}
